--- a/app/index.html
+++ b/app/index.html
@@ -20,13 +20,13 @@
         </a>
         <ul class="menu__list">
           <li class="menu__item">
-            <a class="menu__link menu__link--active" href="#">Главная</a>
+            <a class="menu__link menu__link--active link" href="#">Главная</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Блюда</a>
+            <a class="menu__link link" href="#">Блюда</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Контакты</a>
+            <a class="menu__link link" href="#">Контакты</a>
           </li>
         </ul>
         <ul class="user-nav">
@@ -63,7 +63,183 @@
     </div>
   </header>
 
+  <main class="main">
 
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__top">
+        <form class="footer__form" action="#">
+          <a class="logo footer__logo" href="#">
+            <img class="logo__img" src="images/logo.svg" alt="Логотип">
+          </a>
+          <input class="footer__input" type="email" name="email" placeholder="Ваш email" required>
+          <button class="btn footer__btn" type="submit">
+            <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g id="Frame">
+                <g id="Group">
+                  <path id="Vector"
+                    d="M10.318 14.3001C10.0587 14.3001 9.81927 14.1616 9.70234 13.9406L7.66076 10.0822C7.54864 9.87034 7.5679 9.61684 7.71028 9.42119L11.0058 5.20009L6.53816 8.31359C6.33112 8.44879 6.06285 8.46569 5.83861 8.36039L1.75613 6.43184C1.51125 6.31549 1.36199 6.07304 1.37712 5.81434C1.39156 5.55564 1.56835 5.32944 1.82561 5.24039L14.895 0.690388C15.1461 0.603938 15.4288 0.660488 15.6193 0.840538C15.8092 1.01929 15.8711 1.28709 15.7782 1.52499L10.9632 13.875C10.8683 14.1181 10.6296 14.2851 10.3558 14.2988C10.3434 14.2994 10.3304 14.3001 10.318 14.3001Z"
+                    fill="white" />
+                </g>
+              </g>
+            </svg>
+            Подписаться
+          </button>
+        </form>
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Как это работает</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Продукты</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Блюда</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Меню</a>
+          </li>
+        </ul>
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link link" href="#">О нас</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Новости</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Партнеры</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">ЧаВо</a>
+          </li>
+        </ul>
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Скачать приложение</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Блог</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Что нового?</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link link" href="#">Карта сайта</a>
+          </li>
+        </ul>
+
+        <address class="footer__contacts">
+
+          <ul class="footer__contacts-list">
+            <li class="footer__contacts-item">
+              <a class="footer__contacts-link link" href="#">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g id="Iconly/Light/Location">
+                    <g id="Location">
+                      <path id="Stroke 1" fill-rule="evenodd" clip-rule="evenodd"
+                        d="M14.5 10.5005C14.5 9.11924 13.3808 8 12.0005 8C10.6192 8 9.5 9.11924 9.5 10.5005C9.5 11.8808 10.6192 13 12.0005 13C13.3808 13 14.5 11.8808 14.5 10.5005Z"
+                        stroke="#31352B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      <path id="Stroke 3" fill-rule="evenodd" clip-rule="evenodd"
+                        d="M11.9995 21C10.801 21 4.5 15.8984 4.5 10.5633C4.5 6.38664 7.8571 3 11.9995 3C16.1419 3 19.5 6.38664 19.5 10.5633C19.5 15.8984 13.198 21 11.9995 21Z"
+                        stroke="#31352B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </g>
+                  </g>
+                </svg>
+                ул. Т.Г.Шевченко, 1
+              </a>
+            </li>
+            <li class="footer__contacts-item">
+              <a class="footer__contacts-link link" href="tel:+380501112233">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g id="Iconly/Light/Calling">
+                    <g id="Calling">
+                      <path id="Stroke 1" d="M14.353 2.5C18.054 2.911 20.978 5.831 21.393 9.532" stroke="#31352B" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                      <path id="Stroke 3" d="M14.353 6.04297C16.124 6.38697 17.508 7.77197 17.853 9.54297" stroke="#31352B"
+                        stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      <path id="Stroke 5" fill-rule="evenodd" clip-rule="evenodd"
+                        d="M11.0315 12.4724C15.0205 16.4604 15.9254 11.8467 18.4653 14.3848C20.9138 16.8328 22.3222 17.3232 19.2188 20.4247C18.8302 20.737 16.3613 24.4943 7.68447 15.8197C-0.993406 7.144 2.76157 4.67244 3.07394 4.28395C6.18377 1.17385 6.66682 2.58938 9.11539 5.03733C11.6541 7.5765 7.04254 8.48441 11.0315 12.4724Z"
+                        stroke="#31352B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </g>
+                  </g>
+                </svg>
+                380501112233
+              </a>
+            </li>
+            <li class="footer__contacts-item">
+              <a class="footer__contacts-link link" href="mailto:support@sfood.com">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g id="Iconly/Light/Message">
+                    <g id="Message">
+                      <path id="Stroke 1"
+                        d="M17.9026 8.85107L13.4593 12.4641C12.6198 13.1301 11.4387 13.1301 10.5992 12.4641L6.11841 8.85107"
+                        stroke="#31352B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      <path id="Stroke 3" fill-rule="evenodd" clip-rule="evenodd"
+                        d="M16.9089 21C19.9502 21.0084 22 18.5095 22 15.4384V8.57001C22 5.49883 19.9502 3 16.9089 3H7.09114C4.04979 3 2 5.49883 2 8.57001V15.4384C2 18.5095 4.04979 21.0084 7.09114 21H16.9089Z"
+                        stroke="#31352B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    </g>
+                  </g>
+                </svg>
+                support@sfood.com
+              </a>
+            </li>
+          </ul>
+        
+          <ul class="footer__social">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g id="facebook">
+                    <circle id="Ellipse 4" cx="19.5" cy="19.5" r="19.5" fill="#ECECEC" />
+                    <path id="ic-facebook"
+                      d="M17.5468 29.5263V19.8948H15V16.427H17.5468V13.465C17.5468 11.1374 19.0512 9 22.5176 9C23.9211 9 24.959 9.13455 24.959 9.13455L24.8772 12.3729C24.8772 12.3729 23.8188 12.3626 22.6638 12.3626C21.4137 12.3626 21.2134 12.9387 21.2134 13.8948V16.427H24.9765L24.8128 19.8948H21.2134V29.5263H17.5468Z"
+                      fill="#31352B" />
+                  </g>
+                </svg>
+                <span class="sr-only">Ссылка на фейсбук</span>
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g id="twitter">
+                    <circle id="Ellipse 4" cx="19.5" cy="19.5" r="19.5" fill="#ECECEC" />
+                    <path id="ic-twitter"
+                      d="M29.5263 12.9809C28.7715 13.3065 27.95 13.5408 27.1039 13.6321C27.9824 13.1102 28.6402 12.2857 28.954 11.3133C28.1297 11.8037 27.2266 12.1475 26.2849 12.3296C25.8913 11.9088 25.4153 11.5736 24.8865 11.3449C24.3577 11.1161 23.7874 10.9987 23.2113 11C20.8802 11 19.0054 12.8896 19.0054 15.2084C19.0054 15.534 19.0448 15.8596 19.109 16.1729C15.6184 15.9904 12.5053 14.3228 10.4357 11.7697C10.0586 12.4138 9.86095 13.1472 9.86338 13.8936C9.86338 15.3539 10.6059 16.6416 11.7382 17.3989C11.0709 17.3726 10.4193 17.1892 9.83625 16.8636V16.9154C9.83625 18.9604 11.2818 20.6551 13.2084 21.0449C12.8466 21.1388 12.4745 21.1869 12.1008 21.1879C11.827 21.1879 11.5679 21.1608 11.3065 21.1238C11.8393 22.7914 13.3909 24.0026 15.2386 24.042C13.793 25.1743 11.9824 25.8403 10.0163 25.8403C9.66357 25.8403 9.33795 25.828 9 25.7885C10.8649 26.9849 13.0776 27.6756 15.4606 27.6756C23.1965 27.6756 27.4295 21.2669 27.4295 15.7042C27.4295 15.5217 27.4295 15.3391 27.4172 15.1566C28.2362 14.5571 28.954 13.8146 29.5263 12.9809Z"
+                      fill="#31352B" />
+                  </g>
+                </svg>
+                <span class="sr-only">Ссылка на твиттер</span>
+              </a>
+            </li>
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="#">
+                <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g id="instagram">
+                    <circle id="Ellipse 4" cx="19.5" cy="19.5" r="19.5" fill="#ECECEC" />
+                    <path id="ic-instagram"
+                      d="M19.7476 16.4986C17.9572 16.4986 16.4962 17.9597 16.4962 19.75C16.4962 21.5403 17.9572 23.0014 19.7476 23.0014C21.5379 23.0014 22.9989 21.5403 22.9989 19.75C22.9989 17.9597 21.5379 16.4986 19.7476 16.4986ZM29.4993 19.75C29.4993 18.4036 29.5115 17.0694 29.4359 15.7254C29.3602 14.1644 29.0041 12.7789 27.8626 11.6374C26.7186 10.4934 25.3356 10.1398 23.7746 10.0641C22.4282 9.98853 21.094 10.0007 19.75 10.0007C18.4036 10.0007 17.0694 9.98853 15.7254 10.0641C14.1644 10.1398 12.7789 10.4959 11.6374 11.6374C10.4934 12.7814 10.1398 14.1644 10.0641 15.7254C9.98853 17.0718 10.0007 18.406 10.0007 19.75C10.0007 21.094 9.98853 22.4306 10.0641 23.7746C10.1398 25.3356 10.4959 26.7211 11.6374 27.8626C12.7814 29.0066 14.1644 29.3602 15.7254 29.4359C17.0718 29.5115 18.406 29.4993 19.75 29.4993C21.0964 29.4993 22.4306 29.5115 23.7746 29.4359C25.3356 29.3602 26.7211 29.0041 27.8626 27.8626C29.0066 26.7186 29.3602 25.3356 29.4359 23.7746C29.5139 22.4306 29.4993 21.0964 29.4993 19.75ZM19.7476 24.7527C16.9791 24.7527 14.7449 22.5184 14.7449 19.75C14.7449 16.9816 16.9791 14.7473 19.7476 14.7473C22.516 14.7473 24.7503 16.9816 24.7503 19.75C24.7503 22.5184 22.516 24.7527 19.7476 24.7527ZM24.9551 15.7108C24.3088 15.7108 23.7868 15.1888 23.7868 14.5424C23.7868 13.896 24.3088 13.3741 24.9551 13.3741C25.6015 13.3741 26.1235 13.896 26.1235 14.5424C26.1237 14.6959 26.0936 14.8479 26.035 14.9898C25.9763 15.1316 25.8903 15.2605 25.7817 15.369C25.6732 15.4775 25.5443 15.5636 25.4025 15.6222C25.2606 15.6809 25.1086 15.711 24.9551 15.7108Z"
+                      fill="#31352B" />
+                  </g>
+                </svg>
+                <span class="sr-only">Ссылка на инстаграм</span>
+              </a>
+            </li>
+          </ul>
+        </address>
+
+
+      </div>
+      <div class="footer__bottom">
+        <p class="footer__copy">
+          © 2022 Simple Food
+        </p>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/main.min.js"></script>
 </body>
