--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <nav class="menu">
         <a class="logo" href="#">
-          <img class="logo__img" src="images/icons/logo.svg" alt="Логотип">
+          <img class="logo__img" src="images/logo.svg" alt="Логотип">
         </a>
         <ul class="menu__list">
           <li class="menu__item">
@@ -412,7 +412,7 @@
       <div class="footer__top">
         <form class="footer__form" action="#">
           <a class="logo footer__logo" href="#">
-            <img class="logo__img" src="images/icons/logo.svg" alt="Логотип">
+            <img class="logo__img" src="images/logo.svg" alt="Логотип">
           </a>
           <input class="footer__input" type="email" name="email" placeholder="Ваш email" required>
           <button class="btn footer__btn" type="submit">
