--- a/app/page.html
+++ b/app/page.html
@@ -73,7 +73,7 @@
 
   <footer class="footer">
     <div class="container">
-      
+  
       <div class="footer__top">
         <form class="footer__form" action="#">
           <a class="logo footer__logo" href="#">
@@ -90,52 +90,55 @@
                 </g>
               </g>
             </svg>
-            Подписаться
+            Підписатися
           </button>
         </form>
-        <ul class="footer__list">
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Как это работает</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Продукты</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Блюда</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Меню</a>
-          </li>
-        </ul>
-        <ul class="footer__list">
-          <li class="footer__item">
-            <a class="footer__link link" href="#">О нас</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Новости</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Партнеры</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">ЧаВо</a>
-          </li>
-        </ul>
-        <ul class="footer__list">
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Скачать приложение</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Блог</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Что нового?</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link link" href="#">Карта сайта</a>
-          </li>
-        </ul>
-
+  
+        <div class="footer__menu">
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Як це працює</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Продукти</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Страви</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Меню</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Про нас</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Новини</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Партнери</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">ЧаПи</a>
+            </li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Застосунок</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Блог</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Що нового?</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link link" href="#">Мапа сайту</a>
+            </li>
+          </ul>
+        </div>
+  
         <address class="footer__contacts">
           <ul class="footer__contacts-list">
             <li class="footer__contacts-item">
@@ -152,7 +155,7 @@
                     </g>
                   </g>
                 </svg>
-                ул. Т.Г.Шевченко, 1
+                вул. Т.Г.Шевченка, 1
               </a>
             </li>
             <li class="footer__contacts-item">
@@ -160,10 +163,10 @@
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <g id="Iconly/Light/Calling">
                     <g id="Calling">
-                      <path id="Stroke 1" d="M14.353 2.5C18.054 2.911 20.978 5.831 21.393 9.532" stroke="#31352B" stroke-width="1.5"
-                        stroke-linecap="round" stroke-linejoin="round" />
-                      <path id="Stroke 3" d="M14.353 6.04297C16.124 6.38697 17.508 7.77197 17.853 9.54297" stroke="#31352B"
+                      <path id="Stroke 1" d="M14.353 2.5C18.054 2.911 20.978 5.831 21.393 9.532" stroke="#31352B"
                         stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                      <path id="Stroke 3" d="M14.353 6.04297C16.124 6.38697 17.508 7.77197 17.853 9.54297"
+                        stroke="#31352B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                       <path id="Stroke 5" fill-rule="evenodd" clip-rule="evenodd"
                         d="M11.0315 12.4724C15.0205 16.4604 15.9254 11.8467 18.4653 14.3848C20.9138 16.8328 22.3222 17.3232 19.2188 20.4247C18.8302 20.737 16.3613 24.4943 7.68447 15.8197C-0.993406 7.144 2.76157 4.67244 3.07394 4.28395C6.18377 1.17385 6.66682 2.58938 9.11539 5.03733C11.6541 7.5765 7.04254 8.48441 11.0315 12.4724Z"
                         stroke="#31352B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -191,7 +194,7 @@
               </a>
             </li>
           </ul>
-        
+  
           <ul class="footer__social">
             <li class="footer__social-item">
               <a class="footer__social-link" href="#">
@@ -203,7 +206,7 @@
                       fill="#31352B" />
                   </g>
                 </svg>
-                <span class="sr-only">Ссылка на фейсбук</span>
+                <span class="sr-only">Посилання на фейсбук</span>
               </a>
             </li>
             <li class="footer__social-item">
@@ -216,7 +219,7 @@
                       fill="#31352B" />
                   </g>
                 </svg>
-                <span class="sr-only">Ссылка на твиттер</span>
+                <span class="sr-only">Посилання на твіттер</span>
               </a>
             </li>
             <li class="footer__social-item">
@@ -229,18 +232,18 @@
                       fill="#31352B" />
                   </g>
                 </svg>
-                <span class="sr-only">Ссылка на инстаграм</span>
+                <span class="sr-only">Посилання на інстаграм</span>
               </a>
             </li>
           </ul>
         </address>
       </div>
-
-      <div class="footer__bottom">
-        <p class="footer__copy">
-          © 2022 Simple Food
-        </p>
-      </div>
+    </div>
+  
+    <div class="footer__bottom">
+      <p class="footer__copy">
+        © 2023 Simple Food
+      </p>
     </div>
   </footer>
 
