--- a/app/html/index.html
+++ b/app/html/index.html
@@ -22,6 +22,10 @@
     
     @include('components/_hero.html')
     @include('components/_popular.html')
+    @include('components/_features.html')
+    @include('components/_restorant.html')
+    @include('components/_testimonials.html')
+    @include('components/_app.html')
 
 
   </main>
