--- a/html/index.html
+++ b/html/index.html
@@ -22,10 +22,10 @@
     @include('lego/_mobile-menu.html')
     @include('pages/index/_hero.html')
     @include('pages/index/_popular.html')
-    <!-- @include('pages/index/_features.html') -->
-    <!-- @include('pages/index/_restorant.html') -->
-    <!-- @include('pages/index/_testimonials.html') -->
-    <!-- @include('lego/_app.html') -->
+    @include('pages/index/_features.html')
+    @include('pages/index/_restaurant.html')
+    @include('pages/index/_testimonials.html')
+    @include('lego/_app.html')
 
 
   </main>
