--- a/html/lego/_mobile-menu.html
+++ b/html/lego/_mobile-menu.html
@@ -19,7 +19,7 @@
       <a class="mobile-menu__link link" href="#">Страви</a>
     </li>
     <li class="mobile-menu__item">
-      <a class="mobile-menu__link link" href="#">Контакти</a>
+      <a class="mobile-menu__link link" href="#footer">Контакти</a>
     </li>
   </ul>
 
