--- a/html/pages/index/_features.html
+++ b/html/pages/index/_features.html
@@ -11,17 +11,17 @@
       </p>
 
       <ul class="features__list">
-        <li class="features__item" style="background-image: url('../images/icon-stopwatch.svg');">
+        <li class="features__item" style="background-image: url('./images/icon-stopwatch.svg');">
           <h3 class="features__item-text">
             Швидка доставка за 15 хвилин
           </h3>
         </li>
-        <li class="features__item" style="background-image: url('../images/icon-delivery.svg');">
+        <li class="features__item" style="background-image: url('./images/icon-delivery.svg');">
           <h3 class="features__item-text">
             Чемні кур’єри
           </h3>
         </li>
-        <li class="features__item" style="background-image: url('../images/icon-shop.svg');">
+        <li class="features__item" style="background-image: url('./images/icon-shop.svg');">
           <h3 class="features__item-text">
             Більше 500 закладів
           </h3>
