--- a/html/lego/_app.html
+++ b/html/lego/_app.html
@@ -8,12 +8,12 @@
         Ресторани, які ви любите - у ваших руках. Встановлюйте застосунок та замовляйте їжу в зручному місці в зручний
         час
       </p>
-      <a class="app__link" href="#" style="background-image: url('../../images/app-store.jpg'); width: 120px;">
+      <a class="app__link app__link--appstore" href="#" style="background-image: url('images/app-store.jpg');">
         <span class="sr-only">
           Посилання на скачування додатку в AppStore
         </span>
       </a>
-      <a class="app__link" href="#" style="background-image: url('../../images/play-store.jpg');">
+      <a class="app__link" href="#" style="background-image: url('images/play-store.jpg');">
         <span class="sr-only">
           Посилання на скачування додатку в GooglePlay
         </span>
