--- a/html/lego/_header.html
+++ b/html/lego/_header.html
@@ -13,31 +13,19 @@
           <a class="menu__link link" href="#">Страви</a>
         </li>
         <li class="menu__item">
-          <a class="menu__link link" href="#">Контакти</a>
+          <a class="menu__link link" href="#footer">Контакти</a>
         </li>
       </ul>
     </nav>
 
     <ul class="user-nav">
       <li class="user-nav__item">
-        <form class="user-nav__search">
-          <label class="user-nav__search-label">
-            <span class="sr-only">Введіть назву товару</span>
-            <input class="user-nav__search-input" name="search" type="search">
-          </label>
-          <button class="user-nav__btn user-nav__btn--search" type="button">
-            <svg class="user-nav__icon" width="21" height="22">
-              <use href="images/sprite.svg#icon-search"></use>
-            </svg>
-            <span class="sr-only">Кнопка пошуку товарів</span>
-          </button>
-          <button class="user-nav__btn user-nav__btn--submit" type="submit">
-            <svg class="user-nav__icon user-nav__icon--submit" width="11" height="19">
-              <use href="images/sprite.svg#next-arrow"></use>
-            </svg>
-            <span class="sr-only">Кнопка пошуку товарів</span>
-          </button>
-        </form>
+        <button class="user-nav__btn" type="button">
+          <svg class="user-nav__icon" width="21" height="22">
+            <use href="images/sprite.svg#icon-search"></use>
+          </svg>
+          <span class="sr-only">Кнопка пошуку товарів</span>
+        </button>
       </li>
       <li class="user-nav__item">
         <button class="user-nav__btn" type="button">
@@ -55,4 +43,4 @@
       <span class="sr-only">Відкрити меню</span>
     </button>
   </div>
-</header> 
+</header>
