--- a/html/lego/_app.html
+++ b/html/lego/_app.html
@@ -19,6 +19,6 @@
         </span>
       </a>
     </div>
-    <img class="app__img" src="../../images/app.jpg" alt="Додаток SimpleFood та овочі" width="570" height="380">
+    <img class="app__img" src="images/app.jpg" alt="Додаток SimpleFood та овочі" width="570" height="380">
   </div>
 </section>
