--- a/html/pages/index/_testimonials.html
+++ b/html/pages/index/_testimonials.html
@@ -9,7 +9,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="testimonials__content">
-            <img class="testimonials__img" src="../../images/daryna.jpg" alt="Дарина" width="300" height="300">
+            <img class="testimonials__img" src="images/daryna.jpg" alt="Дарина" width="300" height="300">
             <blockquote class="testimonials__quote">
               <p class="testimonials__text">
                 SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
@@ -28,7 +28,7 @@
         </div>
         <div class="swiper-slide">
           <div class="testimonials__content">
-            <img class="testimonials__img" src="../../images/daryna.jpg" alt="Дарина" width="300" height="300">
+            <img class="testimonials__img" src="images/daryna.jpg" alt="Дарина" width="300" height="300">
             <blockquote class="testimonials__quote">
               <p class="testimonials__text">
                 SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
@@ -47,7 +47,7 @@
         </div>
         <div class="swiper-slide">
           <div class="testimonials__content">
-            <img class="testimonials__img" src="../../images/daryna.jpg" alt="Дарина" width="300" height="300">
+            <img class="testimonials__img" src="images/daryna.jpg" alt="Дарина" width="300" height="300">
             <blockquote class="testimonials__quote">
               <p class="testimonials__text">
                 SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
@@ -66,7 +66,7 @@
         </div>
         <div class="swiper-slide">
           <div class="testimonials__content">
-            <img class="testimonials__img" src="../../images/daryna.jpg" alt="Дарина" width="300" height="300">
+            <img class="testimonials__img" src="images/daryna.jpg" alt="Дарина" width="300" height="300">
             <blockquote class="testimonials__quote">
               <p class="testimonials__text">
                 SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
