--- a/catalog.html
+++ b/catalog.html
@@ -84,7 +84,7 @@
         </span>
       </a>
     </div>
-    <img class="app__img" src="../../images/app.jpg" alt="Додаток SimpleFood та овочі" width="570" height="380">
+    <img class="app__img" src="images/app.jpg" alt="Додаток SimpleFood та овочі" width="570" height="380">
   </div>
 </section>
 
