--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
 
   </main>
 
-  <!-- @include('lego/_footer.html')   -->
+  @include('lego/_footer.html')  
 
   <script src="js/main.min.js"></script>
 </body>
