--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="testimonials__content">
-            <img class="testimonials__img" src="../../images/daryna.jpg" alt="Дарина" width="300" height="300">
+            <img class="testimonials__img" src="images/daryna.jpg" alt="Дарина" width="300" height="300">
             <blockquote class="testimonials__quote">
               <p class="testimonials__text">
                 SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
@@ -566,7 +566,7 @@
         </div>
         <div class="swiper-slide">
           <div class="testimonials__content">
-            <img class="testimonials__img" src="../../images/daryna.jpg" alt="Дарина" width="300" height="300">
+            <img class="testimonials__img" src="images/daryna.jpg" alt="Дарина" width="300" height="300">
             <blockquote class="testimonials__quote">
               <p class="testimonials__text">
                 SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
@@ -585,7 +585,7 @@
         </div>
         <div class="swiper-slide">
           <div class="testimonials__content">
-            <img class="testimonials__img" src="../../images/daryna.jpg" alt="Дарина" width="300" height="300">
+            <img class="testimonials__img" src="images/daryna.jpg" alt="Дарина" width="300" height="300">
             <blockquote class="testimonials__quote">
               <p class="testimonials__text">
                 SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
@@ -604,7 +604,7 @@
         </div>
         <div class="swiper-slide">
           <div class="testimonials__content">
-            <img class="testimonials__img" src="../../images/daryna.jpg" alt="Дарина" width="300" height="300">
+            <img class="testimonials__img" src="images/daryna.jpg" alt="Дарина" width="300" height="300">
             <blockquote class="testimonials__quote">
               <p class="testimonials__text">
                 SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт та
@@ -660,14 +660,139 @@
         </span>
       </a>
     </div>
-    <img class="app__img" src="../../images/app.jpg" alt="Додаток SimpleFood та овочі" width="570" height="380">
+    <img class="app__img" src="images/app.jpg" alt="Додаток SimpleFood та овочі" width="570" height="380">
   </div>
 </section>
 
 
   </main>
 
-  
+  <footer class="footer" id="footer">
+  <div class="container">
+
+    <div class="footer__top">
+
+      <div class="footer__top-item">
+        <a class="logo footer__logo" href="#">
+          <img class="logo__img" src="images/logo.svg" alt="Логотип">
+        </a>
+        <form class="footer__form" action="#">
+          <label class="footer__label">
+            <span class="sr-only">Введіть ваш email</span>
+            <input class="footer__input" type="email" name="email" placeholder="Ваш email" required>
+          </label>
+          <button class="footer__btn btn btn--big" type="submit">
+            <svg class="footer__btn-icon" width="16" height="16">
+              <use href="images/sprite.svg#icon-telegram"></use>
+            </svg>
+            Підписатися
+          </button>
+        </form>
+      </div>
+
+      <ul class="footer__menu">
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Як це працює</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Про нас</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Застосунок</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Продукти</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Новини</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Блог</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Страви</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Партнери</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Що нового?</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Меню</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">ЧаПи</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="#">Мапа сайту</a>
+        </li>
+      </ul>
+      
+      <address class="contacts">
+  <ul class="contacts__list">
+    <li class="contacts__item">
+      <span class="contacts__location">
+        <svg class="contacts__icon" width="24" height="24">
+          <use href="images/sprite.svg#icon-location"></use>
+        </svg>
+        вул. Т.Г.Шевченка, 1
+      </span>
+    </li>
+    <li class="contacts__item">
+      <a class="contacts__link link" href="tel:+380501112233">
+        <svg class="contacts__icon" width="24" height="24">
+          <use href="images/sprite.svg#icon-phone"></use>
+        </svg>
+        380501112233
+      </a>
+    </li>
+    <li class="contacts__item">
+      <a class="contacts__link link" href="mailto:support@sfood.com">
+        <svg class="contacts__icon" width="24" height="24">
+          <use href="images/sprite.svg#icon-message"></use>
+        </svg>
+        support@sfood.com
+      </a>
+    </li>
+  </ul>
+
+  <ul class="social">
+    <li class="social__item">
+      <a class="social__link" href="#">
+        <svg class="social__icon" width="20" height="20">
+          <use href="images/sprite.svg#icon-facebook"></use>
+        </svg>
+        <span class="sr-only">Посилання на фейсбук</span>
+      </a>
+    </li>
+    <li class="social__item">
+      <a class="social__link" href="#">
+        <svg class="social__icon" width="20" height="20">
+          <use href="images/sprite.svg#icon-twitter"></use>
+        </svg>
+        <span class="sr-only">Посилання на твіттер</span>
+      </a>
+    </li>
+    <li class="social__item">
+      <a class="social__link" href="#">
+        <svg class="social__icon" width="20" height="20">
+          <use href="images/sprite.svg#icon-instagram"></use>
+        </svg>
+        <span class="sr-only">Посилання на інстаграм</span>
+      </a>
+    </li>
+  </ul>
+</address>
+    </div>
+  </div>
+
+  <div class="footer__bottom">
+    <p class="footer__copy">
+      © 2023 Simple Food
+    </p>
+  </div>
+</footer>  
 
   <script src="js/main.min.js"></script>
 </body>
